--- a/.pages.yml
+++ b/.pages.yml
@@ -1,3 +1,12 @@
 media:
   input: src/images
   output: media
+content:
+  - name: blog
+    label: Articles
+    path: src/content/blog
+    type: collection
+    fields:
+      - name: title
+      - name: description
+      - name: pubDate
