Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -11,3 +11,6 @@ content:
       - name: description
       - name: pubDate
         type: date
+        label: date
+        options:
+          format: yyyy-MM-dd
