--- a/.pages.yml
+++ b/.pages.yml
@@ -14,6 +14,9 @@ content:
         label: date
         options:
           format: yyyy-MM-dd
+      - name: featured
+        type: boolean
+        default: false
       - name: body
         label: Body
         type: rich-text
