--- a/.pages.yml
+++ b/.pages.yml
@@ -7,7 +7,7 @@ content:
     path: src/content/blog
     type: collection
     view:
-      fields: [ title, published, pubDate ]
+      fields: [ title, published, featured, pubDate ]
     fields:
       - name: title
       - name: description
